# EKDualMic

./: .gitignore  Cargo.toml  Dual-Mic-Crosstalk-Canceller-README.md  README.md  rust-toolchain.toml
configs/: master.toml  node-a-mock-render.toml  node-a-mock.toml  node-a-wasapi-wav.toml  node-a.toml  node-b.toml  peer.toml  slave.toml
crates/app/: Cargo.toml
crates/app/src/: config.rs  gui.rs  lib.rs  main.rs  runtime.rs
crates/audio_cancel/: Cargo.toml
crates/audio_cancel/src/: lib.rs
crates/audio_capture/: Cargo.toml
crates/audio_capture/src/: lib.rs
crates/audio_output/: Cargo.toml
crates/audio_output/src/: lib.rs
crates/audio_residual/: Cargo.toml
crates/audio_residual/src/: lib.rs
crates/audio_sync/: Cargo.toml
crates/audio_sync/src/: lib.rs
crates/audio_transport/: Cargo.toml
crates/audio_transport/src/: lib.rs
crates/audio_vad/: Cargo.toml
crates/audio_vad/src/: lib.rs
crates/common_types/: Cargo.toml
crates/common_types/src/: lib.rs
docs/: architecture.md  completed-work.md  config.md  tuning.md  windows-test.md
skills/ek-dual-mic-maintainer/: SKILL.md
skills/ek-dual-mic-maintainer/agents/: openai.yaml
tools/audio_device_probe/: Cargo.toml
tools/audio_device_probe/src/: main.rs
tools/offline_replay/: Cargo.toml
tools/offline_replay/src/: main.rs
tools/runtime_smoke/: Cargo.toml
tools/runtime_smoke/src/: main.rs
tools/wav_dump/: Cargo.toml
tools/wav_dump/src/: main.rs
